Replaced singleton by Map.of() in PrincipalDatabaseAuthenticationManager.java